--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "short_name": "GreenBite",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2a9d8f",
+  "background_color": "#f7faf7",
+  "theme_color": "#2ea44f",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "assets/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
